<resources>
    <string name="app_name">珍医苑</string>
    <string name="loadding">  加载中...</string>
    <string name="snackbar_action">关闭</string>
    <string name="autoloadding_zhunbei">  准备加载</string>
    <string name="autoloadding_no_data">没有数据可以加载</string>
    <string name="autoloadding_comple_data">共为您加载 %1$d 条数据</string>
    <string name="autoloadding_failure">加载失败</string>
    <string name="no_data">亲,数据空空如也</string>
    <string name="http_request_failure">亲。。。加载失败</string>
    <string name="no_data_dingdan"> 亲,您的订单空空如也...</string>
    <string name="loadd_failure"> 页面加载失败</string>

    <!--****************************登录注册********************************-->

    <string name="inputPhone">请输入手机号</string>
    <string name="inputCode">请输验证码</string>
    <string name="inputPassword">请输入密码</string>
    <string name="inputPasswordAffitm">请确认密码</string>
    <string name="inputCheckHint">两次密码不一致</string>
    <string name="inputVerificationCode">请输入验证码</string>
    <string name="getVerificationCode">获取验证码</string>
    <string name="login">立即登录</string>
    <string name="register">快速注册</string>
    <string name="personal">我的</string>
    <string name="chat">群聊</string>
    <string name="community">社区动态</string>
    <string name="change_password">修改密码</string>
    <string name="about_us">关于我们</string>
    <string name="call_us">联系我们</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="logout">退出登录</string>
    <string name="perfect_information">完善个人资料</string>
    <string name="login_pwd">帐号密码登录</string>
    <string name="edit_phone">请输入手机号</string>
    <string name="edit_pwd">请输入密码</string>

</resources>
