<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fb="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_ee"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/to_login"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        android:background="@color/white">

        <com.example.administrator.smartpillow.widget.circleImageView.ICircleImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:src="@mipmap/logo"
            app:ic_border_color="#ccc"
            app:ic_border_width="2dp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_toRightOf="@id/iv_icon"
            android:text="@string/app_name" />

        <com.example.administrator.smartpillow.widget.button.FlatButton
            android:id="@+id/perfect_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/perfect_information"
            app:border_color="@color/gray_ee"
            app:border_width="@dimen/dp_2"
            fb:cornerRadius="@dimen/dp_5"
            fb:strokeColor="@color/black" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/change_password"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@mipmap/to_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/about_us"
        android:layout_marginTop="@dimen/dp_2"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@mipmap/to_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/call_us"
        android:layout_marginTop="@dimen/dp_2"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/call_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/iv"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@mipmap/to_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tel"
            android:text="12345678912"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/iv"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/help_and_feedback"
        android:layout_marginTop="@dimen/dp_2"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/help_and_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@mipmap/to_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/logout"
        android:layout_marginTop="@dimen/dp_2"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@mipmap/to_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>